crates/mineral-tui/src/components/toast/snapshots/card_midexpand_snapshot.snap
---
source: crates/mineral-tui/src/components/toast/card.rs
description: "卡片 ExpandDown 中途:纯色空壳自顶向下长出,底缘八分块平滑"
expression: t.backend()
---
"                                                                                "
"                                                    ███████████████████████████ "
"                                                    ███████████████████████████ "
"                                                    ███████████████████████████ "
"                                                    ▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
