crates/mineral-tui/src/components/toast/snapshots/card_steady_snapshot.snap
---
source: crates/mineral-tui/src/components/toast/card.rs
description: "驻留卡片稳态:⚠ 标题边框 + 两行 body + 底边 x 关闭提示"
expression: t.backend()
---
"                                                                                "
"                                                    ╭ ⚠ v0.9.0 要点 ──────────╮ " Hidden by multi-width symbols: [(64, " "), (66, " ")]
"                                                    │ 新增配置 toast.position │ " Hidden by multi-width symbols: [(55, " "), (57, " "), (59, " "), (61, " ")]
"                                                    │ 旧键 search.style 改名  │ " Hidden by multi-width symbols: [(55, " "), (57, " "), (73, " "), (75, " ")]
"                                                    ╰────────────────────── x ╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
